# datahub-sdk-rust

./: Cargo.toml  README.md
src/: errors.rs  lib.rs  version.rs
src/client/: client_factory.rs  datahub_client.rs  dh_json_client.rs  macros.rs  mod.rs
src/compressor/: mod.rs
src/config/: account.rs  dhconfig.rs  http_config.rs  mod.rs
src/middleware/: mod.rs  set_header.rs
src/models/: common.rs  err_msg.rs  mod.rs
src/models/cursor/: mod.rs  query_cursor_res.rs
src/models/project/: get_project_res.rs  list_project_res.rs  mod.rs
src/models/record/: field.rs  mod.rs  read_data_res.rs  record_schema.rs  record_type.rs  write_data_res.rs
src/models/shard/: list_shard_res.rs  merge_shard_res.rs  mod.rs  split_shard_res.rs
src/models/subscription/: create_subscription_res.rs  get_subscription_res.rs  list_subscriptions_res.rs  mod.rs  subscription_session_opt_res.rs
src/models/topic/: get_topic_res.rs  list_topic_res.rs  mod.rs
src/payload/: comment.rs  cursor.rs  data.rs  mod.rs  projects.rs  shards.rs  subscriptions.rs  topics.rs
src/signature/: mod.rs
src/subscribe/: mod.rs  subscription.rs  subscription_offset.rs
